deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cool-service
spec:
  selector:
    app: cool-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
