deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cool-service
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: cool-service.example.com
    http:
      paths:
      - backend:
          service:
            name: cool-service
            port:
              number: 80
